# Firmware_Practice

./: .gitignore  CMakeLists.txt  DynArrAlloc  DynArrAlloc.c  ErrorCodeTracking.c  FindFirstRepeatElement_Int  FindFirstRepeatElement_Int.c  FindRepeatLogMsg  FindRepeatLogMsg.c  FindSubString.c  Makefile  Queue4ISRHandle.c  README.md
.cache/clangd/index/: CountSetBits.c.B148FAF7100A1624.idx  DynArrAlloc.c.2A83C1AD0EEA8710.idx  FaultedMemoryAddress.cpp.88F99D02DA4D9994.idx  FindFirstRepeatElement_Int.c.F471D18EA8DE7D5D.idx  FindRepeatLogMsg.c.A48378D64FCECF1C.idx  FindSubString.c.A44F622AB6C32756.idx  FleetDiagnosticSystem.cpp.A791950353F387D2.idx  HashMap.cpp.70B3508A8533F176.idx  LinkedList.cpp.62B195F862F3A306.idx  PriorityQueue.cpp.F3FE3A236655A2F3.idx  RotatedLogSearch.c.056D2221D7874F7B.idx  SerializeFragmentedData.c.F5C399E500F6EFE2.idx  SortingLogMessages.c.6D2FDE283743627B.idx  TwoSum.cpp.3482E1D837EC155A.idx  main.cpp.16F1D1EF8E9DB0E5.idx  main.cpp.6A84487301088986.idx  test_dummy.cpp.5A0CCF94F27BA3BA.idx
Python/: BinarySearch.py  CANLogParser.py  JSONLogParser.py  LogParser.py  NonRepeatChar.py  Palindrome.py  ProductExceptSelf.py  main.py
Python/tests/: test_BinarySearch.py  test_CANLogParser.py  test_JSONLogParser.py  test_Palindrome.py  test_ProductExceptSelf.py
code/: CMakeLists.txt
code/inc/: BitManipulation.h  MutexCounter.h  Spinlock.h
code/src/: CMakeLists.txt
code/src/BitManipulation/: BitManipulation.c
code/src/Concurrency/: MutexCounter.c  Spinlock.c
code/src/ErrorCodeTracking/: ErrorCodeTracking.c
code/src/FaultedMemoryAddress/: FaultedMemoryAddress.cpp
code/src/HashMap/: HashMap.cpp
code/src/LinkedList/: LinkedList.cpp
code/src/MergeSort/: MergeSort.c
code/src/PriorityQueue/: PriorityQueue.cpp
code/src/QuickSort/: QuickSort.c
code/src/SortingLogMessages/: SortingLogMessages.c
code/src/StringManipulation/: StringManipulation.cpp
main/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  FleetDiagnosticSystem.cpp  RotatedLogSearch.c  SerializeFragmentedData.c  organize_sources.py
source/CountSetBits/: CountSetBits.c
source/FindFirstRepeatElement_Int/: FindFirstRepeatElement_Int.c
source/MergeSort/: MergeSort.c
source/StringManipulation/: StringManipulation.cpp
source/TwoSum/: TwoSum.cpp
test/: CMakeLists.txt  test_BitManipulation.cpp  test_Concurrency.cpp  test_dummy.cpp
